--- a/Python1.ipynb
+++ b/Python1.ipynb
@@ -26,13 +26,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EBbO1Tx7DhOz",
-        "outputId": "d63aa952-2b10-48e3-d277-005d1ca4bc29"
+        "outputId": "01c2bca1-9c5f-46ea-9c91-070ee782e794"
       },
       "outputs": [
         {
@@ -61,15 +61,81 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A28I8brWOkwY",
-        "outputId": "7c587238-4e5e-4a6c-b9ee-a90f18ec461e"
+        "outputId": "f247b0cf-9be1-41e5-d46e-c493bd282f3a"
       },
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "['False', 'None', 'True', 'and', 'as', 'assert', 'async', 'await', 'break', 'class', 'continue', 'def', 'del', 'elif', 'else', 'except', 'finally', 'for', 'from', 'global', 'if', 'import', 'in', 'is', 'lambda', 'nonlocal', 'not', 'or', 'pass', 'raise', 'return', 'try', 'while', 'with', 'yield']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import this"
+      ],
+      "metadata": {
+        "id": "PeHlGNIXQSx7"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = 10\n",
+        "user_name = \"Alan\"\n",
+        "\n",
+        "quantity = 10\n",
+        "unit_price = 1.99\n",
+        "extended_price = quantity * unit_price\n",
+        "print(extended_price)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JpPIN1IdSEmR",
+        "outputId": "40c67eb8-ab7a-4403-de65-cce63076bb3f"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "19.9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "first_name = \"Alan\"\n",
+        "last_name = \"Simpson\"\n",
+        "print(first_name, last_name)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IBRTzlERbFZX",
+        "outputId": "65ac5dd8-a585-4878-bcdf-069629a77b04"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Alan Simpson\n"
           ]
         }
       ]
