--- a/Python2.ipynb
+++ b/Python2.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,7 +66,7 @@
         "id": "AlR1LY4kcV3C",
         "outputId": "37b15a95-abea-4fc5-b5b0-e2937ecc461c"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,7 +93,7 @@
         "id": "YOhpfkUZcazO",
         "outputId": "5dfadb5d-1bbf-420b-8b9f-bd1b8d937b27"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,12 +107,29 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(min(10,20,30,40,90))\n",
+        "\n",
+        "print(round(1.12345678,3))"
+      ],
       "metadata": {
-        "id": "j8TU239MdO7a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Fy3sEEmeQzU",
+        "outputId": "d6f7d522-ed21-4f00-f08a-c0b594dd3a55"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "1.123\n"
+          ]
+        }
+      ]
     }
   ]
 }
