--- a/Python2.ipynb
+++ b/Python2.ipynb
@@ -26,13 +26,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "EBbO1Tx7DhOz",
-        "outputId": "511f3e18-166e-4610-b22d-f12c95f17167"
+        "outputId": "4903b597-1497-4e9b-c4e0-94fd5946f83a"
       },
       "outputs": [
         {
@@ -64,9 +64,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AlR1LY4kcV3C",
-        "outputId": "37b15a95-abea-4fc5-b5b0-e2937ecc461c"
+        "outputId": "52d1ab31-d87d-483a-f71f-6c7a2ce91454"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -91,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YOhpfkUZcazO",
-        "outputId": "5dfadb5d-1bbf-420b-8b9f-bd1b8d937b27"
+        "outputId": "500d7b7c-3333-4dec-a01f-062ff411e2a2"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9Fy3sEEmeQzU",
-        "outputId": "d6f7d522-ed21-4f00-f08a-c0b594dd3a55"
+        "outputId": "9abe3b9a-06fc-41af-b6ed-d359294d0729"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,6 +127,62 @@
           "text": [
             "10\n",
             "1.123\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import math\n",
+        "\n",
+        "print(math.sqrt(81))\n",
+        "\n",
+        "print(math.sqrt(99))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AQO3mQa9f8rx",
+        "outputId": "1f485a61-dc87-4703-8675-dff7c6930aa4"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9.0\n",
+            "9.9498743710662\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "username = \"Alan\"\n",
+        "print(f\"Hello {username}\")\n",
+        "\n",
+        "print(\"Hello {username}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l4Cdc0zTgnUi",
+        "outputId": "85840ea2-8396-4d85-fc56-aae2293d561f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello Alan\n",
+            "Hello {username}\n"
           ]
         }
       ]
