--- a/PythonFile1.ipynb
+++ b/PythonFile1.ipynb
@@ -43,9 +43,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "INDScvAl_nBs",
-        "outputId": "d2352e3d-5106-42fc-c7ef-2d2d0904fc78"
+        "outputId": "5ac0b339-3998-4b5a-c98d-acf57cacf27d"
       },
-      "execution_count": 27,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -67,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dO-ieyrv_3fm",
-        "outputId": "ea20b316-812f-4799-bab6-a52e202c2c30"
+        "outputId": "9b859a19-dcef-4ef7-b564-dfe80b6c62e3"
       },
-      "execution_count": 28,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "stream",
@@ -93,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PE9e99URACDe",
-        "outputId": "c4b9a969-5cdf-4c63-8481-4c1aa3b4ca13"
+        "outputId": "06276dd6-45f8-4e07-bb1b-472a20bac495"
       },
-      "execution_count": 29,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,9 +118,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HsxoCiWiAIc6",
-        "outputId": "9de9d070-3376-4e34-ce01-5e01d9a48939"
+        "outputId": "4e771638-2738-434d-fd6c-1ba514e2858d"
       },
-      "execution_count": 30,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,12 +144,12 @@
       ],
       "metadata": {
         "id": "lHPxC0w4AdnP",
-        "outputId": "967c99b6-6242-449f-ba5f-f4e689c931dd",
+        "outputId": "8d841869-cd14-4392-fb44-724ecfb27b76",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wRHkVKrbDCkV",
-        "outputId": "4e15b205-b939-40f1-c191-ea674a0e654a"
+        "outputId": "80710b96-f394-49b3-bf71-005f0764cf64"
       },
-      "execution_count": 32,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,9 +204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kPOSUrRADuam",
-        "outputId": "9640be8e-ec92-4591-b452-a1cdc91e59ba"
+        "outputId": "0359355e-a5f9-44d1-8272-a72f9d0f6f0b"
       },
-      "execution_count": 33,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,6 +214,105 @@
           "text": [
             "programiz.pro\n",
             "apple.com\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a, b, c = 5, 3.2, 'Hello'\n",
+        "\n",
+        "print (a)  # prints 5\n",
+        "print (b)  # prints 3.2\n",
+        "print (c)  # prints Hello"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dCcvtSydEaLd",
+        "outputId": "fc52337a-f710-4bbe-98e7-520e3ffdb02d"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "3.2\n",
+            "Hello\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "integer_number = 123\n",
+        "float_number = 1.23\n",
+        "\n",
+        "new_number = integer_number + float_number\n",
+        "\n",
+        "# display new value and resulting data type\n",
+        "print(\"Value:\",new_number)\n",
+        "print(\"Data Type:\",type(new_number))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sITSOXo4E7Yz",
+        "outputId": "b1e54995-2177-48fa-800d-c22dbdb126be"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Value: 124.23\n",
+            "Data Type: <class 'float'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_string = '12'\n",
+        "num_integer = 23\n",
+        "\n",
+        "print(\"Data type of num_string before Type Casting:\",type(num_string))\n",
+        "\n",
+        "# explicit type conversion\n",
+        "num_string = int(num_string)\n",
+        "\n",
+        "print(\"Data type of num_string after Type Casting:\",type(num_string))\n",
+        "\n",
+        "num_sum = num_integer + num_string\n",
+        "\n",
+        "print(\"Sum:\",num_sum)\n",
+        "print(\"Data type of num_sum:\",type(num_sum))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ijjWfYrXFXpf",
+        "outputId": "f30dd04c-ac15-495e-d4e7-e7cb29b211cb"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Data type of num_string before Type Casting: <class 'str'>\n",
+            "Data type of num_string after Type Casting: <class 'int'>\n",
+            "Sum: 35\n",
+            "Data type of num_sum: <class 'int'>\n"
           ]
         }
       ]
